--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,26 @@ body {
     background-color: #f5f5f5;
 }
 
-.container {
+.container{
     display: grid;
     grid-template-columns: 1fr;
     grid-template-areas: 
+        "globalActions"
         "newTodo"
         ".";
     width: 100%;
     padding: 20px;
     gap: 15px 40px;
-}
+}   
+    .container > .global-actions {
+        display: inline-block;
+        grid-area: globalActions;
+        cursor: pointer;
+    }
+
     .container > .form {
         display: inline-block;
         grid-area: newTodo;
-        background-color: yellow;
     }
     .container > .item {
         display: inline-block;
@@ -71,7 +77,8 @@ body {
 @media ( min-width: 500px ) {
     .container {
         grid-template-columns: 1fr 1fr;
-        grid-template-areas: 
+        grid-template-areas:
+            "globalActions globalActions" 
             "newTodo newTodo"
             ". .";
     }
@@ -80,6 +87,7 @@ body {
     .container {
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-areas: 
+            "globalActions globalActions globalActions"
             "newTodo newTodo newTodo"
             ". . .";
     }
@@ -87,7 +95,8 @@ body {
 @media ( min-width: 1300px ) {
     .container {
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-areas: 
+        grid-template-areas:
+            "globalActions globalActions globalActions globalActions"
             "newTodo newTodo newTodo newTodo"
             ". . . .";
     }
